--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
-html{
+@layer base {
+  body {
+    @apply dark:bg-slate-900 dark:text-slate-200;
+  }
+}
+
+html {
   scroll-behavior: smooth;
 }
 body {
